---
config:
  layout: dagre
---
erDiagram
	direction TB
	USERS {
		serial user_id PK ""  
		uuid user_external_id UK "Business Key"  
		varchar email  ""  
		varchar first_name  ""  
		varchar last_name  ""  
		varchar phone  ""  
		date date_of_birth  ""  
		timestamp registration_date  ""  
		varchar status  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	USER_ADDRESSES {
		serial address_id PK ""  
		uuid address_external_id UK "Business Key"  
		uuid user_external_id FK "Business Key"  
		varchar address_type  ""  
		varchar country  ""  
		varchar region  ""  
		varchar city  ""  
		varchar street_address  ""  
		varchar postal_code  ""  
		varchar apartment  ""  
		boolean is_default  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	USER_STATUS_HISTORY {
		serial history_id PK ""  
		uuid user_external_id FK "Business Key"  
		varchar old_status  ""  
		varchar new_status  ""  
		varchar change_reason  ""  
		timestamp changed_at  ""  
		varchar changed_by  ""  
		varchar session_id  ""  
		inet ip_address  ""  
		text user_agent  ""  
	}
	PRODUCTS {
		serial product_id PK ""  
		varchar product_sku UK "Business Key"  
		varchar product_name  ""  
		varchar category  ""  
		varchar brand  ""  
		decimal price  ""  
		varchar currency  ""  
		integer weight_grams  ""  
		decimal dimensions_length_cm  ""  
		decimal dimensions_width_cm  ""  
		decimal dimensions_height_cm  ""  
		boolean is_active  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	ORDERS {
		serial order_id PK ""  
		uuid order_external_id UK "Business Key"  
		uuid user_external_id FK "Business Key - Cross DB"  
		varchar order_number UK ""  
		timestamp order_date  ""  
		varchar status  ""  
		decimal subtotal  ""  
		decimal tax_amount  ""  
		decimal shipping_cost  ""  
		decimal discount_amount  ""  
		decimal total_amount  ""  
		varchar currency  ""  
		uuid delivery_address_external_id FK "Business Key - Cross DB"  
		varchar delivery_type  ""  
		date expected_delivery_date  ""  
		date actual_delivery_date  ""  
		varchar payment_method  ""  
		varchar payment_status  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	ORDER_ITEMS {
		serial order_item_id PK ""  
		uuid order_external_id FK "Business Key"  
		varchar product_sku FK "Business Key"  
		integer quantity  ""  
		decimal unit_price  ""  
		decimal total_price  ""  
		varchar product_name_snapshot  "Historical Data"  
		varchar product_category_snapshot  "Historical Data"  
		varchar product_brand_snapshot  "Historical Data"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	ORDER_STATUS_HISTORY {
		serial history_id PK ""  
		uuid order_external_id FK "Business Key"  
		varchar old_status  ""  
		varchar new_status  ""  
		varchar change_reason  ""  
		timestamp changed_at  ""  
		varchar changed_by  ""  
		varchar session_id  ""  
		inet ip_address  ""  
		text notes  ""  
	}
	WAREHOUSES {
		serial warehouse_id PK ""  
		varchar warehouse_code UK "Business Key"  
		varchar warehouse_name  ""  
		varchar warehouse_type  ""  
		varchar country  ""  
		varchar region  ""  
		varchar city  ""  
		varchar street_address  ""  
		varchar postal_code  ""  
		boolean is_active  ""  
		decimal max_capacity_cubic_meters  ""  
		varchar operating_hours  ""  
		varchar contact_phone  ""  
		varchar manager_name  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	PICKUP_POINTS {
		serial pickup_point_id PK ""  
		varchar pickup_point_code UK "Business Key"  
		varchar pickup_point_name  ""  
		varchar pickup_point_type  ""  
		varchar country  ""  
		varchar region  ""  
		varchar city  ""  
		varchar street_address  ""  
		varchar postal_code  ""  
		boolean is_active  ""  
		integer max_capacity_packages  ""  
		varchar operating_hours  ""  
		varchar contact_phone  ""  
		varchar partner_name  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	SHIPMENTS {
		serial shipment_id PK ""  
		uuid shipment_external_id UK "Business Key"  
		uuid order_external_id FK "Business Key - Cross DB"  
		varchar tracking_number UK ""  
		varchar status  ""  
		integer weight_grams  ""  
		integer volume_cubic_cm  ""  
		integer package_count  ""  
		varchar origin_warehouse_code FK "Business Key"  
		varchar destination_type  ""  
		varchar destination_pickup_point_code FK "Business Key"  
		uuid destination_address_external_id FK "Business Key - Cross DB"  
		timestamp created_date  ""  
		timestamp dispatched_date  ""  
		timestamp estimated_delivery_date  ""  
		timestamp actual_delivery_date  ""  
		text delivery_notes  ""  
		varchar recipient_name  ""  
		varchar delivery_signature  ""  
		timestamp effective_from  "SCD Type 2"  
		timestamp effective_to  "SCD Type 2"  
		boolean is_current  "SCD Type 2"  
		timestamp created_at  ""  
		timestamp updated_at  ""  
		varchar created_by  ""  
		varchar updated_by  ""  
	}
	SHIPMENT_MOVEMENTS {
		serial movement_id PK ""  
		uuid shipment_external_id FK "Business Key"  
		varchar movement_type  ""  
		varchar location_type  ""  
		varchar location_code  ""  
		timestamp movement_datetime  ""  
		varchar operator_name  ""  
		text notes  ""  
		decimal latitude  ""  
		decimal longitude  ""  
		timestamp created_at  ""  
		varchar created_by  ""  
	}
	SHIPMENT_STATUS_HISTORY {
		serial history_id PK ""  
		uuid shipment_external_id FK "Business Key"  
		varchar old_status  ""  
		varchar new_status  ""  
		varchar change_reason  ""  
		timestamp changed_at  ""  
		varchar changed_by  ""  
		varchar location_type  ""  
		varchar location_code  ""  
		text notes  ""  
		boolean customer_notified  ""  
	}

	USERS||--o{USER_ADDRESSES:"user_external_id"
	USERS||--o{USER_STATUS_HISTORY:"user_external_id"
	ORDERS||--o{ORDER_ITEMS:"order_external_id"
	PRODUCTS||--o{ORDER_ITEMS:"product_sku"
	ORDERS||--o{ORDER_STATUS_HISTORY:"order_external_id"
	WAREHOUSES||--o{SHIPMENTS:"warehouse_code"
	PICKUP_POINTS||--o{SHIPMENTS:"pickup_point_code"
	SHIPMENTS||--o{SHIPMENT_MOVEMENTS:"shipment_external_id"
	SHIPMENTS||--o{SHIPMENT_STATUS_HISTORY:"shipment_external_id"
	USERS||--o{ORDERS:"user_external_id (cross-db)"
	USER_ADDRESSES||--o{ORDERS:"address_external_id (cross-db)"
	USER_ADDRESSES||--o{SHIPMENTS:"address_external_id (cross-db)"
	ORDERS||--||SHIPMENTS:"order_external_id (cross-db)"

	style USERS fill:#BBDEFB,stroke:#000000
	style USER_ADDRESSES fill:#BBDEFB,stroke:#000000
	style USER_STATUS_HISTORY stroke:#000000,fill:#BBDEFB
	style PRODUCTS fill:#FFCDD2,stroke:#000000
	style ORDERS fill:#FFCDD2,stroke:#000000
	style ORDER_ITEMS stroke:#000000,fill:#FFCDD2
	style ORDER_STATUS_HISTORY stroke:#000000,fill:#FFCDD2
	style WAREHOUSES fill:#C8E6C9,stroke:#000000
	style PICKUP_POINTS fill:#C8E6C9,stroke:#000000
	style SHIPMENTS fill:#C8E6C9,stroke:#000000
	style SHIPMENT_MOVEMENTS fill:#C8E6C9,stroke:#000000
	style SHIPMENT_STATUS_HISTORY fill:#C8E6C9,stroke:#000000